<resources>
    <string name="app_name">RaCo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="login_fragment">login_fragment</string>
    <string name="register_text">Register</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="retype_password">retype password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="soccer">Soccer</string>
    <string name="text_welcome">Welcome to RaCo!</string>
    <string name="title_activity_navigation_drawer">navigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name von eingeloggtem Nutzer!</string>
    <string name="nav_header_subtitle">Mail von Nutzer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_add_players">Add Players</string>
    <string name="menu_manage_calendar">Manage Calendar</string>
    <string name="menu_trainings">Trainings</string>

    <string name="home_second">Home Second</string>
    <string name="create_your_account">Create your Account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="new_register_as_coach">New? Register as Coach</string>
    <string name="i_forgot_my_password">I forgot my password!</string>
    <string name="home_as_dashboard">Home used as Dashboard!</string>
    <string name="About">About</string>
    <string name="home">Home</string>
</resources>
