<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.raco.ui.home.AddPlayersFragment"
        android:label="@string/menu_add_players"
        tools:layout="@layout/fragment_add_players">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.raco.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.raco.ui.gallery.ManageCalendarFragment"
        android:label="@string/menu_manage_calendar"
        tools:layout="@layout/fragment_manage_calendar" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.raco.ui.slideshow.TrainingsFragment"
        android:label="@string/menu_trainings"
        tools:layout="@layout/fragment_trainings" />
</navigation>