<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    tools:context=".login.RegisterFragment">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/create_your_account"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/button_green"
        android:ems="15"
        android:text="@string/register_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/email"
        android:ems="13"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_one"
        app:layout_constraintEnd_toEndOf="@+id/password_one"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password_one" />

    <EditText
        android:id="@+id/password_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/password"
        android:ems="13"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/password_verify"
        app:layout_constraintEnd_toEndOf="@+id/password_verify"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_verify" />

    <EditText
        android:id="@+id/password_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="13"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/spinner_countries"
        app:layout_constraintEnd_toEndOf="@+id/spinner_countries"
        app:layout_constraintStart_toStartOf="@+id/spinner_countries" />

    <Spinner
        android:id="@+id/spinner_clubs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="@+id/button_register" />

    <Spinner
        android:id="@+id/spinner_countries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_clubs"
        app:layout_constraintEnd_toEndOf="@+id/spinner_clubs"
        app:layout_constraintStart_toStartOf="@+id/spinner_clubs" />
</androidx.constraintlayout.widget.ConstraintLayout>